--- a/contact.html
+++ b/contact.html
@@ -193,23 +193,23 @@
                             <form action="https://formspree.io/f/xjvzozgp" method="POST"  class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
-                                    <input type="text" class="form-control" name="contact-name">
+                                    <input type="text" class="form-control" name="contact-name" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="email" class="form-control" name="contact-email">
+                                    <input type="email" class="form-control" name="contact-email" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Phone</label>
-                                    <input type="tel" class="form-control" name="contact-company">
+                                    <input type="tel" class="form-control" name="contact-company" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Company</label>
-                                    <input type="text" class="form-control" name="contact-company">
+                                    <input type="text" class="form-control" name="contact-company" required>
                                 </div>
                                 <div class="form-group mb--40">
                                     <label>How can we help you?</label>
-                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4"></textarea>
+                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4" required></textarea>
                                 </div>
                                 <div class="form-group">
                                     <input type="submit" value="Get Pricing Now" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn"></input>
