--- a/index.html
+++ b/index.html
@@ -371,15 +371,15 @@ and Social Media services in Lagos, Nigeria. ">
                             <form method="POST" action="https://formspree.io/f/xjvzozgp" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
-                                    <input type="text" class="form-control" name="contact-name" placeholder="John Smith">
+                                    <input type="text" class="form-control" name="contact-name" placeholder="John Smith" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="email" class="form-control" name="contact-email" placeholder="example@gmail.com">
+                                    <input type="email" class="form-control" name="contact-email" placeholder="example@gmail.com" required>
                                 </div>
                                 <div class="form-group mb--40">
                                     <label>Phone</label>
-                                    <input type="tel" class="form-control" name="contact-company" placeholder="+123456789">
+                                    <input type="tel" class="form-control" name="contact-company" placeholder="+123456789" required>
                                 </div>
                                  <div class="form-group">
                                     <input type="submit" value="Get Free Quote" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn"></input>
